// Copyright 2022 Linkall Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package linkall.vanus.trigger;

import "config.proto";
import "meta.proto";

option go_package = "github.com/linkall-labs/vanus/proto/pkg/trigger";

service TriggerWorker {
  rpc Start(StartTriggerWorkerRequest) returns (StartTriggerWorkerResponse);
  rpc Stop(StopTriggerWorkerRequest) returns (StopTriggerWorkerResponse);
  rpc AddSubscription(AddSubscriptionRequest) returns (AddSubscriptionResponse);
  rpc UpdateSubscription(UpdateSubscriptionRequest) returns (UpdateSubscriptionResponse);
  rpc RemoveSubscription(RemoveSubscriptionRequest)
      returns (RemoveSubscriptionResponse);
  rpc PauseSubscription(PauseSubscriptionRequest)
      returns (PauseSubscriptionResponse);
  rpc ResumeSubscription(ResumeSubscriptionRequest)
      returns (ResumeSubscriptionResponse);
}

message StartTriggerWorkerRequest {
  linkall.vanus.config.ServerConfig config = 1;
}

message StartTriggerWorkerResponse {}

message StopTriggerWorkerRequest {}

message StopTriggerWorkerResponse {}

message AddSubscriptionRequest {
  uint64 id = 1;
  repeated meta.Filter filters = 2;
  string sink = 3;
  string event_bus = 4;
  repeated meta.OffsetInfo offsets = 5;
  meta.InputTransformer input_transformer = 6;
}

message AddSubscriptionResponse {}

message UpdateSubscriptionRequest {
  uint64 id = 1;
  repeated meta.Filter filters = 2;
  string sink = 3;
  meta.InputTransformer input_transformer = 4;
}

message UpdateSubscriptionResponse {}

message RemoveSubscriptionRequest {
  uint64 subscription_id = 1;
}

message RemoveSubscriptionResponse {}

message PauseSubscriptionRequest {
  uint64 subscription_id = 1;
}

message PauseSubscriptionResponse {}

message ResumeSubscriptionRequest {
  uint64 subscription_id = 1;
}

message ResumeSubscriptionResponse {}
